PyMaker/datas/object2/RawHTML/i18301/Python_DOC_referPages.cassandra-file-cqlsh-line-95-except-importerror-e.txt
<div class="post-text" itemprop="text">
<p>I am having trouble getting Cassandra up and running.
I have downloaded Cassandra 2.0.1 and Python 3.3.2.</p>
<p>Upon starting the CLI for cassandra I get an error:</p>
<pre><code>C:\Dev\ApacheCassandra\apache-cassandra-2.0.1\bin&gt;python cqlsh
  File "cqlsh", line 95
    except ImportError, e:
                      ^
SyntaxError: invalid syntax
</code></pre>
<p>Any suggestions? I am going to downgrade python to 2.7 and see if that fixes my issue.</p>
<p>Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p>The version of Cassandra that you are using is only compatible with Python 2.x.  </p>
<p>The following syntax:</p>
<pre><code>except ImportError, e:
</code></pre>
<p>was deprecated in Python 2.7 and <a href="https://docs.python.org/3/whatsnew/3.0.html#changed-syntax" rel="noreferrer">removed in Python 3.x</a>.  Nowadays, you use the <code>as</code> keyword:</p>
<pre><code>except ImportError as e:
</code></pre>
<p>This means that you need to either downgrade to Python 2.x or get a version of Cassandra that is compatible with Python 3.x.</p>
</div>
<span class="comment-copy">Any explanation for the downvote? I would like guidance on asking better questions.</span>
<span class="comment-copy">You could run 2to3 on the package to make it work with python 3.x</span>
<span class="comment-copy">Also the "CLI for Cassandra" and "cqlsh" are two different things.</span>
<span class="comment-copy">Ah, ok. I downgraded to 2.7 and Cassandra worked. Thanks!</span>
<span class="comment-copy">Yep. should downgrade python or it's just a series of syntax errors.</span>
<span class="comment-copy">@EricFrancis I downgraded to python2.7 via anaconda and switch environments with <code>source activate py27</code>. However, after I start cassandra in the py27 environment, I still get the same error when running <code>cqlsh</code>. Any advice? I'm working in Ubuntu 14.04.</span>
<span class="comment-copy">For cqlsh version 5.0.1 (which supports only python 2.7) solution was to change cqlsh file header from <code>#!/usr/bin/python3</code> to <code>#!/usr/bin/python</code></span>
